--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <!-- OGP -->
+  {% if page.image %}
+    <meta property="og:image" content="{{ page.image }}">
+  {% endif %}
 
   {%- include custom-head.html -%}
   
