add twitter:card setting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <!-- OGP -->
   {% if page.image %}
     <meta property="og:image" content="{{ page.image }}">
+    <meta name="twitter:card" content="summary">
   {% endif %}
 
   {%- include custom-head.html -%}
